crates/reinhardt-pages/tests/ui/page/fail/keyed_for_missing_expr.stderr
error: expected parentheses
 --> tests/ui/page/fail/keyed_for_missing_expr.rs:8:27
  |
8 |             for item in items @key {
  |                                    ^
